# ssd.pytorch

./: conversion_functions.py  eval.py  my_eval.py  plot_cpp_results.py  ssd.py  train.py
cpp_client/: CMakeLists.txt  DataProcessing.hpp  LoadConfig.hpp  NMS.cpp  NMS.hpp  PostProcessing.cpp  PreProcessing.cpp  main.cpp  params.txt
data/: __init__.py  config.py  conversion_functions.py  faces.py  voc0712.py
demo/: live.py
layers/: box_utils.py
layers/functions/: detection.py  prior_box.py
layers/modules/: multibox_loss.py
utils/: augmentations.py
